--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,15 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "noEmit": true
   },
   "include": [
     "src/**/*"
-  ]
+  ],
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  },
+  "exclude": ["node_modules"]
 }
